--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "swiftsc-runtime"
-version = "1.0.3-beta"
+version = "1.0.3"
 edition = "2021"
 authors = ["SwiftSC-Lang Contributors"]
 description = "Runtime library for SwiftSC-Lang smart contracts"
